# AioFast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  aiocraft  aiocraft.bat  aiocraft.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  FUNDING.yml  NIGHTLY_FAILURE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  docker.yml  docs.yml  nightly.yml  pr-check.yml  release.yml  security.yml  stale.yml
app/events/: user_registered.py
app/guards/: jwt_guard.py
app/http/controllers/: health_controller.py  user_controller.py
app/jobs/: send_email.py
app/models/: user.py
app/providers/: app_service_provider.py
app/routes/: api.py  web.py
benchmarks/: bench_container.py  bench_routing.py  conftest.py
bootstrap/: __init__.py  app.py
cli/: index.html
config/: app.py  auth.py  cache.py  cors.py  crypto.py  database.py  http.py  logger.py  mail.py
core/adapters/aiogram/: __init__.py  adapter.py  aiogram_service_provider.py  dependency.py  middleware.py
core/adapters/litestar/: __init__.py  adapter.py  dependency.py  litestar_service_provider.py  middleware.py
core/auth/: __init__.py  access.py  auth_events.py  auth_service_provider.py  casbin_guard.py  decorators.py  gate.py  guards.py  mfa.py  middleware.py  oauth.py  password.py  policy.py  session_manager.py  throttle.py  tokens.py  user_mixin.py
core/configuration/: __init__.py  base.py  cache.py  config_service_provider.py  environment.py  manager.py  repository.py  secrets.py
core/console/: __init__.py  command.py  completion.py  console_application.py  console_service_providers.py  decorators.py  docs_generator.py  events.py  input.py  kernel.py  loader.py  lock.py  middleware.py  output.py  profiler.py  runner.py  signals.py  signature_parser.py  stub_engine.py  testing.py  wizard.py
core/controller/: __init__.py  base.py  compiler.py  controller_service_provider.py  decorators.py  response.py
core/database/: __init__.py  audit.py  bulk.py  cache.py  cursor.py  database_service_provider.py  encryption.py  events.py  health.py  locks.py  manager.py  migration.py  model.py  observer.py  query.py  relationships.py  replica.py  scopes.py  seeder.py  session.py  tenant.py  testing.py
core/exceptions/: __init__.py  auth_exceptions.py  base.py  configuration_exceptions.py  console_exceptions.py  database_exceptions.py  foundation_exceptions.py  http_exceptions.py  registry_exceptions.py
core/facades/: log.py
core/foundation/: __init__.py  application.py  binding.py  container.py  contextual.py  decorators.py  platform.py  scoped.py  service_provider.py
core/log/: __init__.py  buffer.py  channel.py  context.py  decorator.py  formatter.py  interceptor.py  logger_service_provider.py  manager.py  middleware.py  profiler.py  sampling.py  sanitizer.py
core/registry/: __init__.py  adapter.py  health.py  manager.py  provider.py  route.py
core/repository/: __init__.py  base.py  criteria.py  repository_service_provider.py
core/server/: __init__.py  base.py  granian.py  servcer_service_provider.py  uvicorn.py
core/service/: __init__.py  base.py  service_service_provider.py
core/support/: __init__.py  cache.py  config.py  env.py
core/testing/: conftest.py
core/validation/: __init__.py  async_rules.py  conditional.py  decorators.py  dto.py  errors.py  form_request.py  nested.py  rules.py  sanitizer.py  validation_service_provider.py  validator.py
database/factories/: user_factory.py
database/seeders/: database_seeder.py
dev/benchmarks/: data.js
docker/: entrypoint.sh
docs/: cli.md  index.md  quickstart.md
loadtests/: locustfile.py
loadtests/scenarios/: auth_flow.py
quickstart/: index.html
routes/: api.py
search/: search_index.json
(+142 files in other folders)
