[project]
name = "aiofast"
version = "0.1.0"
description = "The most powerful async Python web framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AioFast Team", email = "team@aiofast.dev" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "aio-pika>=9.6.1",
    "aiodns>=4.0.0",
    "aiofiles>=25.1.0",
    "aiogram>=3.26.0",
    "aiohttp>=3.13.3",
    "aiokafka>=0.13.0",
    "aiomysql>=0.3.2",
    "aioodbc>=0.5.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.5",
    "dishka>=1.9.0",
    "faststream[kafka]>=0.6.7",
    "granian>=2.7.2",
    "litestar[standard]>=2.21.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "oracledb>=3.4.2",
    "psycopg[binary,pool]>=3.3.3",
    "pycasbin>=2.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "redis[hiredis]>=7.3.0",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.15",
    "coverage[toml]>=7.0",
    "aiosqlite>=0.19",
    "faker>=20.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
loadtest = [
    "locust>=2.43.3",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

# ── Hatch — tell it where the package lives ───────────────
[tool.hatch.build.targets.wheel]
packages = ["core"]

# ── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "database: database tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ── Coverage ──────────────────────────────────────────────
[tool.coverage.run]
source = ["core"]
omit = [
    "tests/*",
    "benchmarks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
fail_under = 80

# ── Ruff ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "S101",
    "S104",
    "B008",
    "E501",
    # Project ships Russian comments/docstrings — Cyrillic looks "ambiguous" to ruff.
    "RUF001",
    "RUF002",
    "RUF003",
    # Framework base classes use mutable class-level defaults ([] / {}) by design.
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "T20"]
# Tests may use loose style: ambiguous names, late imports, explicit if/else.
"core/testing/**" = ["S101", "S106", "T20", "E741", "E402", "RUF034"]
"benchmarks/**" = ["T20"]
"config/**" = ["F401", "E501", "UP035"]
"core/registry/manager.py" = ["T20"]
# Optional lifecycle hooks are intentionally empty (not abstract).
"core/console/command.py" = ["B027"]

[tool.ruff.lint.isort]
known-first-party = ["core"]
